2008-02-11  Mike Krüger <mkrueger@novell.com> 

	* TangoLightStyle.xml, Mono.TextEditor.Highlighting/Style.cs, C64Style.xml:
	  Reversed bookmark color.

2008-02-11  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/TextEditor.cs: Middle mouse button paste now works.

2008-02-11  Mike Krüger <mkrueger@novell.com> 

	* TangoLightStyle.xml, Mono.TextEditor.mdp, bookmark.png, OblivionStyle.xml,
	  UbuntuStyle.xml, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/Document.cs, Mono.TextEditor/FoldMarkerMargin.cs,
	  Mono.TextEditor/IMargin.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/BookmarkMargin.cs, Mono.TextEditor/TextEditorOptions.cs,
	  Mono.TextEditor/GutterMargin.cs, Mono.TextEditor.Highlighting/Style.cs,
	  Makefile.am, C64Style.xml: Worked on text editor - performance & drawing
	  improvements.

2008-02-11 Michael Hutchinson <mhutchinson@novell.com> 

	* Makefile.am: Fix location of installed assembly.

2008-02-11  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/GutterMargin.cs,
	  gtk-gui/objects.xml, Makefile.am: Optimized/Refactored the text editor.

2008-02-11  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/FoldMarkerMargin.cs, Mono.TextEditor/IMargin.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/BookmarkMargin.cs,
	  Mono.TextEditor/GutterMargin.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/Rule.cs: Optimized performance a bit. (To
	  get real performance gain, scrolling must be solved differently)

2008-02-10  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/LineSplitter.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs: Fixed some drawing issues.

2008-02-09  Mike Krüger <mkrueger@novell.com> 
